fix jumping link issue and refine UI

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -4,15 +4,14 @@
 
 body {
   width: 268px;
-  height: 250px;
+  height: 247px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, sans-serif;
   margin: 0;
   padding: 8px;
   background-color: #f5f5f5;
   color: #333;
-  /* position: relative; */
-  border: 1px solid black;
+  /* border: 1px solid black; */
 }
 
 .settings-container1 {
@@ -75,11 +74,13 @@ body {
 }
 
 h2 {
+  position: absolute;
   margin: 0;
   font-size: 30px;
   font-weight: 800;
   justify-content: center;
   align-items: baseline;
+  top: 4px;
 }
 
 h2 .highlight {
@@ -90,7 +91,9 @@ h2 .highlight {
 
 h3 {
   /* 汉字标题*/
-  margin: 4px 0 7px 1px;
+  position: relative;
+  top: 50px;
+  margin: 1px 0 5px 2px;
   font-size: 14px;
   display: inline-block;
   vertical-align: middle;
@@ -110,9 +113,11 @@ h4 {
 }
 
 .control-wrapper-toggle {
+  position: relative;
+  top: 50px;
   display: inline-block;
   vertical-align: middle;
-  margin-left: 42px; /* Adjust the margin as needed */
+  margin-left: 40px; /* Adjust the margin as needed */
 }
 
 /* Toggle switch styling */
